--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
 }
-.namehilight{
+.orenge-highliter{
     color: orange;
 }
 .half-width{
@@ -20,6 +21,53 @@ h1{
 .half-width img{
     width: 100%;
 }
+.top-banner{
+    
+    background: url(./Images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.second-banner{
+    background: url(./Images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+
+.signle-experence{
+    box-shadow: 10px 10px 40px gray ;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+.experence-Area{
+    background: url(./Images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+ #full-stack{
+    border-left: 7px solid #000;
+    border-image: linear-gradient(45deg,lightsalmon, tomato);
+    border-image-slice: 1 ;
+ }
+
+ #baby-web{
+    border-left: 7px solid #000;
+    border-image: linear-gradient(180deg,blue, cyan);
+    border-image-slice: 1 ;
+ }
+ footer{
+    text-align: center;
+ }
 
 
 
